[package]
name = "vtracer"
version = "0.6.2"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "A cmd app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "2.33.3"
image = "0.25.6"
visioncortex = { path = "/home/evan/dev/visioncortex" }
fastrand = "1.8"
pyo3 = { version = "0.19.0", optional = true }
opencv = "0.94.3"

[features]
python-binding = ["pyo3"]

[lib]
name = "vtracer"
crate-type = ["rlib", "cdylib"]
